CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_encmbr_enroll__x.object
<CustomObject>
    <description>batchsit$t_auth_encmbr_enroll</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_auth_encmbr_enroll</externalName>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_encmbr_enroll</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Date of Care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Authorization ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Encumbrance Enrollment</relationshipLabel>
        <relationshipName>batchsit_t_auth_encmbr_enroll</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_encmbr_auth__c</fullName>
        <description>idn_encmbr_auth</description>
        <externalDeveloperName>idn_encmbr_auth</externalDeveloperName>
        <label>Identifier Auth Encumbrance</label>
        <length>50</length>
        <referenceTo>batchsit_t_auth_encmbr__x</referenceTo>
        <relationshipLabel>Authorization Encumbrance Enrollment</relationshipLabel>
        <relationshipName>batchsit_t_auth_encmbr_enroll</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_encmbr_auth_enroll__c</fullName>
        <description>idn_encmbr_auth_enroll</description>
        <externalDeveloperName>idn_encmbr_auth_enroll</externalDeveloperName>
        <label>Identifier Auth Encumbrance Enroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_0_36_months__c</fullName>
        <description>ind_0_36_months</description>
        <externalDeveloperName>ind_0_36_months</externalDeveloperName>
        <label>0-36 Months</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_auth_encmbr_enroll1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence History</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization Encumbrance Enrollment</label>
    <pluralLabel>Authorization Encumbrance Enrollment</pluralLabel>
</CustomObject>